deployments/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fiap-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/gerps2/fiap-store-backend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - name: jwt-keys
              mountPath: /app/.keys
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: jwt-keys
          secret:
            secretName: backend-keys
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: fiap-store
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
