deployments/k8s/mfe-checkout-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: mfe-checkout
  namespace: fiap-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mfe-checkout
  template:
    metadata:
      labels:
        app: mfe-checkout
    spec:
      containers:
        - name: mfe-checkout
          image: ghcr.io/gerps2/fiap-store-mfe-checkout:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
  strategy:
    blueGreen:
      activeService: mfe-checkout-active
      previewService: mfe-checkout-preview
      autoPromotionEnabled: false
---
apiVersion: v1
kind: Service
metadata:
  name: mfe-checkout-active
  namespace: fiap-store
spec:
  selector:
    app: mfe-checkout
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mfe-checkout-preview
  namespace: fiap-store
spec:
  selector:
    app: mfe-checkout
  ports:
    - port: 80
      targetPort: 80
