deployments/k8s/shell-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: shell
  namespace: fiap-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shell
  template:
    metadata:
      labels:
        app: shell
    spec:
      containers:
        - name: shell
          image: ghcr.io/gerps2/fiap-store-shell:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
  strategy:
    canary:
      steps:
        - setWeight: 10
        - pause: {}
        - setWeight: 30
        - pause: {}
        - setWeight: 100
---
apiVersion: v1
kind: Service
metadata:
  name: shell
  namespace: fiap-store
spec:
  selector:
    app: shell
  ports:
    - port: 80
      targetPort: 80
